fix ABV values, fix spacing

--- a/cc-user-interface/src/pages/home2.css
+++ b/cc-user-interface/src/pages/home2.css
@@ -103,12 +103,12 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 450px;
-    height: 700px;
+    height: 85%;
     background: #f4efe8;
     border-radius: 20px;
     border: #415046 solid 2px;
     position: fixed;
-    top: 50%;
+    top: 55%;
     left: 25%;
     transform: translate(-50%, -50%);
     padding: 10px;
@@ -120,12 +120,12 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 500px;
-    height: 700px;
+    height: 85%;
     background: #f4efe8;
     border-radius: 20px;
     border: #415046 solid 2px;
     position: fixed;
-    top: 50%;
+    top: 55%;
     left: 75%;
     transform: translate(-50%, -50%);
     padding: 10px;
